--- a/upload-ai-server/package.json
+++ b/upload-ai-server/package.json
@@ -4,13 +4,14 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "dev": "tsx watch src/server.ts"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
     "@types/node": "^20.6.0",
+    "prisma": "^5.3.0",
     "tsx": "^3.12.10",
     "typescript": "^5.2.2"
   },
