--- a/upload-ai-server/package.json
+++ b/upload-ai-server/package.json
@@ -19,6 +19,7 @@
     "@fastify/multipart": "^7.7.3",
     "@prisma/client": "5.3.0",
     "fastify": "^4.23.2",
+    "openai": "^4.7.1",
     "zod": "^3.22.2"
   }
 }
